# Cargo.toml

[package]
name = "realtime_websocket_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = { version = "0.3", features = ["sink", "std"] }
thiserror = "1.0"
url = "2.5"
tracing = "0.1"
